fixing layout issue, home profile not found, and saving homes as published

--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,13 +1,13 @@
 .footer-container {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    max-width: 90.5rem;
-    margin: 0 auto;
-    padding: 1.375rem 2.75rem;
+  /* position:absolute; TODO: check how to set this footer on the bottom for view account details without using position:absolute*/
+  bottom: 0;
+  width: 100%;
+  max-width: 90.5rem;
+  margin: 0 auto;
+  padding: 1.375rem 2.75rem;
 }
 
 .copyright {
-    text-align: center;
-    font-size: 0.75rem;
-  }
+  text-align: center;
+  font-size: 0.75rem;
+}
